// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Typography component styles with "button" variant 1`] = `
.c0 {
  font-family: "IBM Plex Sans",sans-serif;
  font-style: normal;
  font-weight: normal;
  margin: 0;
  font-size: 0.875rem;
  line-height: 1.29em;
  margin-bottom: 0;
}

<div>
  <span
    class="c0"
  >
    Hello
  </span>
</div>
`;

exports[`Typography component styles with "headline" variant 1`] = `
.c0 {
  font-family: "IBM Plex Sans",sans-serif;
  font-style: normal;
  font-weight: normal;
  margin: 0;
  font-size: 1.75rem;
  line-height: 1.29em;
  margin-bottom: 0.5em;
}

<div>
  <h2
    class="c0"
  >
    Hello
  </h2>
</div>
`;

exports[`Typography component styles with "info" variant 1`] = `
.c0 {
  font-family: "IBM Plex Sans",sans-serif;
  font-style: normal;
  font-weight: normal;
  margin: 0;
  font-size: 0.75rem;
  line-height: 1.5em;
  margin-bottom: 0;
}

<div>
  <p
    class="c0"
  >
    Hello
  </p>
</div>
`;

exports[`Typography component styles with "infoBold" variant 1`] = `
.c0 {
  font-family: "IBM Plex Sans",sans-serif;
  font-style: normal;
  font-weight: normal;
  margin: 0;
  font-size: 0.75rem;
  line-height: 1.5em;
  font-weight: 500;
  margin-bottom: 0;
}

<div>
  <p
    class="c0"
  >
    Hello
  </p>
</div>
`;

exports[`Typography component styles with "paragraph" variant 1`] = `
.c0 {
  font-family: "IBM Plex Sans",sans-serif;
  font-style: normal;
  font-weight: normal;
  margin: 0;
  font-size: 0.875rem;
  line-height: 1.4em;
  margin-bottom: 0.75em;
}

<div>
  <p
    class="c0"
  >
    Hello
  </p>
</div>
`;

exports[`Typography component styles with "paragraphBold" variant 1`] = `
.c0 {
  font-family: "IBM Plex Sans",sans-serif;
  font-style: normal;
  font-weight: normal;
  margin: 0;
  font-size: 0.875rem;
  line-height: 1.4em;
  font-weight: 500;
  margin-bottom: 0.75em;
}

<div>
  <p
    class="c0"
  >
    Hello
  </p>
</div>
`;

exports[`Typography component styles with "subtitle" variant 1`] = `
.c0 {
  font-family: "IBM Plex Sans",sans-serif;
  font-style: normal;
  font-weight: normal;
  margin: 0;
  font-size: 1rem;
  line-height: 1.375em;
  margin-bottom: 0.5em;
}

<div>
  <h4
    class="c0"
  >
    Hello
  </h4>
</div>
`;

exports[`Typography component styles with "title" variant 1`] = `
.c0 {
  font-family: "IBM Plex Sans",sans-serif;
  font-style: normal;
  font-weight: normal;
  margin: 0;
  font-size: 1.5rem;
  line-height: 1.3333333em;
  margin-bottom: 0.5em;
}

<div>
  <h3
    class="c0"
  >
    Hello
  </h3>
</div>
`;

exports[`Typography component styles with "undefined" variant 1`] = `
.c0 {
  font-family: "IBM Plex Sans",sans-serif;
  font-style: normal;
  font-weight: normal;
  margin: 0;
  font-size: 0.875rem;
  line-height: 1.4em;
  margin-bottom: 0.75em;
}

<div>
  <p
    class="c0"
  >
    Hello
  </p>
</div>
`;

exports[`specific typography components styles of "ButtonTypography" component 1`] = `
.c0 {
  font-family: "IBM Plex Sans",sans-serif;
  font-style: normal;
  font-weight: normal;
  margin: 0;
  font-size: 0.875rem;
  line-height: 1.29em;
  margin-bottom: 0;
}

<div>
  <span
    class="c0"
  >
    Hello
  </span>
</div>
`;

exports[`specific typography components styles of "Headline" component 1`] = `
.c0 {
  font-family: "IBM Plex Sans",sans-serif;
  font-style: normal;
  font-weight: normal;
  margin: 0;
  font-size: 1.75rem;
  line-height: 1.29em;
  margin-bottom: 0.5em;
}

<div>
  <h2
    class="c0"
  >
    Hello
  </h2>
</div>
`;

exports[`specific typography components styles of "InfoBold" component 1`] = `
.c0 {
  font-family: "IBM Plex Sans",sans-serif;
  font-style: normal;
  font-weight: normal;
  margin: 0;
  font-size: 0.75rem;
  line-height: 1.5em;
  font-weight: 500;
  margin-bottom: 0;
}

<div>
  <p
    class="c0"
  >
    Hello
  </p>
</div>
`;

exports[`specific typography components styles of "InfoText" component 1`] = `
.c0 {
  font-family: "IBM Plex Sans",sans-serif;
  font-style: normal;
  font-weight: normal;
  margin: 0;
  font-size: 0.75rem;
  line-height: 1.5em;
  margin-bottom: 0;
}

<div>
  <p
    class="c0"
  >
    Hello
  </p>
</div>
`;

exports[`specific typography components styles of "Paragraph" component 1`] = `
.c0 {
  font-family: "IBM Plex Sans",sans-serif;
  font-style: normal;
  font-weight: normal;
  margin: 0;
  font-size: 0.875rem;
  line-height: 1.4em;
  margin-bottom: 0.75em;
}

<div>
  <p
    class="c0"
  >
    Hello
  </p>
</div>
`;

exports[`specific typography components styles of "ParagraphBold" component 1`] = `
.c0 {
  font-family: "IBM Plex Sans",sans-serif;
  font-style: normal;
  font-weight: normal;
  margin: 0;
  font-size: 0.875rem;
  line-height: 1.4em;
  font-weight: 500;
  margin-bottom: 0.75em;
}

<div>
  <p
    class="c0"
  >
    Hello
  </p>
</div>
`;

exports[`specific typography components styles of "Subtitle" component 1`] = `
.c0 {
  font-family: "IBM Plex Sans",sans-serif;
  font-style: normal;
  font-weight: normal;
  margin: 0;
  font-size: 1rem;
  line-height: 1.375em;
  margin-bottom: 0.5em;
}

<div>
  <h4
    class="c0"
  >
    Hello
  </h4>
</div>
`;

exports[`specific typography components styles of "Title" component 1`] = `
.c0 {
  font-family: "IBM Plex Sans",sans-serif;
  font-style: normal;
  font-weight: normal;
  margin: 0;
  font-size: 1.5rem;
  line-height: 1.3333333em;
  margin-bottom: 0.5em;
}

<div>
  <h3
    class="c0"
  >
    Hello
  </h3>
</div>
`;
